# market-making-bot

./: .gitignore  Readme.md  create_trading_bot_structure.sh  requirements.txt
bot_tested_1/: backtest_results.csv
bot_tested_1/cpp_core/: CMakeLists.txt
bot_tested_1/cpp_core/src/: ExecutionHandler.h  MarketData.h  OrderBook.h  Strategy.h  implementations.cpp  main.cpp  test_orderbook  test_orderbook.cpp
bot_tested_1/models/: price_direction_model.joblib
bot_tested_1/python_ml/: 01_generate_sim_data.py  02_feature_engineering.py  03_train_model.py  04_signal_generator.py  05_backtest_analysis.py
bot_tested_1/python_ml/data/: raw_quotes.csv  raw_trades.csv
bot_tested_1/python_ml/models/: price_direction_model.joblib
bot_tested_2/: bash.sh  requirements.txt
bot_tested_2/cpp/: Makefile  main  main.cpp
bot_tested_2/cpp/include/: execution_handler.hpp  market_data_handler.hpp  order_book.hpp  simulated_exchange.hpp  strategy.hpp  types.hpp
bot_tested_2/cpp/src/: execution_handler.cpp  market_data_handler.cpp  order_book.cpp  simulated_exchange.cpp  strategy.cpp
bot_tested_2/cpp/tests/: test_order_book.cpp
bot_tested_2/data/live/: quotes_20251018_203317.csv
bot_tested_2/data/raw/: quotes.csv  trades.csv
bot_tested_2/ipc/: cpp_status.txt  ml_signals.txt  python_status.txt
bot_tested_2/models/: ensemble_model.pkl  price_direction_model.pkl  price_direction_model_features.txt
bot_tested_2/python/backtesting/: analyze_results.py  visualize_performance.py
bot_tested_2/python/data_generation/: generate_synthetic_data.py  kraken_data_collector.py
bot_tested_2/python/ml/: feature_engineering.py  signal_generator.py  tester.py  train_model.py
bot_tested_2/results/: backtest_results.csv
data/raw/: quotes.csv  trades.csv
trading-bot/: README.md  setup.sh
trading-bot/cpp/: CMakeLists.txt
trading-bot/cpp/include/: market_data.hpp  order_book.hpp  signal_reader.hpp  simulated_exchange.hpp  strategy.hpp
trading-bot/cpp/src/: main.cpp  market_data.cpp  order_book.cpp  signal_reader.cpp  simulated_exchange.cpp  strategy.cpp
trading-bot/data/: collect_data.py
trading-bot/python/: backtest_analysis.py  feature_engineering.py  signal_generator.py  train_model.py
